<?xml version="1.0" encoding="utf-8"?>
<layout>

  <data>

    <variable
        name="user"
        type="com.example.kotlinfutures.model.User"/>
  </data>

  <android.support.constraint.ConstraintLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

      <android.support.constraint.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnPhoneCall"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="@dimen/twenty_margin"
            android:background="@android:drawable/sym_action_call"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLocation">
        </Button>

        <ImageView
            android:id="@+id/ivUserIcon"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="48dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/tvFirstLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@{user.nameFirst + ' ' + user.nameLast}"
            app:layout_constraintEnd_toEndOf="@+id/ivUserIcon"
            app:layout_constraintStart_toStartOf="@+id/ivUserIcon"
            app:layout_constraintTop_toBottomOf="@+id/ivUserIcon"
            tools:text="Alice Gonzales"/>

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@{Integer.toString(user.age)}"
            app:layout_constraintEnd_toEndOf="@+id/tvFirstLastName"
            app:layout_constraintStart_toStartOf="@+id/tvFirstLastName"
            app:layout_constraintTop_toBottomOf="@+id/tvFirstLastName"
            tools:text="25 years old"/>

        <TextView
            android:id="@+id/tvDobDescription"
            style="@style/tvLittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ddble_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/tv_date_of_birth_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAge"/>

        <TextView
            android:id="@+id/tvDataOfBirth"
            style="@style/tvMainBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{user.dob}"
            app:layout_constraintStart_toStartOf="@+id/tvDobDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvDobDescription"
            tools:text="1985-06-18"/>

        <TextView
            android:id="@+id/tvGenderDescription"
            style="@style/tvLittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/tv_gender_description"
            app:layout_constraintStart_toStartOf="@+id/tvDataOfBirth"
            app:layout_constraintTop_toBottomOf="@+id/tvDataOfBirth"/>

        <TextView
            android:id="@+id/tvGender"
            style="@style/tvMainBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{user.gender}"
            app:layout_constraintStart_toStartOf="@+id/tvGenderDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvGenderDescription"
            tools:text="Female"/>

        <TextView
            android:id="@+id/tvCellPhoneDescription"
            style="@style/tvLittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/tv_cell_phone"
            app:layout_constraintStart_toStartOf="@+id/tvGender"
            app:layout_constraintTop_toBottomOf="@+id/tvGender"/>

        <TextView
            android:id="@+id/tvCellPhoneNumber"
            style="@style/tvMainBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{user.cell}"
            app:layout_constraintStart_toStartOf="@+id/tvCellPhoneDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvCellPhoneDescription"
            tools:text="+18045789351"/>

        <TextView
            android:id="@+id/tvEmailDescription"
            style="@style/tvLittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/tv_description_email"
            app:layout_constraintStart_toStartOf="@+id/tvCellPhoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/tvCellPhoneNumber"/>

        <TextView
            android:id="@+id/tvEmail"
            style="@style/tvMainBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{user.email}"
            app:layout_constraintStart_toStartOf="@+id/tvEmailDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvEmailDescription"
            tools:text="example@gmail.com"/>

        <TextView
            android:id="@+id/tvLocationDescription"
            style="@style/tvLittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/tv_location_description"
            app:layout_constraintStart_toStartOf="@+id/tvEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail"/>

        <TextView
            android:id="@+id/tvLocation"
            style="@style/tvMainBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{user.location}"
            app:layout_constraintStart_toStartOf="@+id/tvLocationDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvLocationDescription"
            tools:text="Kyiv, Ukraine"/>

      </android.support.constraint.ConstraintLayout>
    </ScrollView>
  </android.support.constraint.ConstraintLayout>
</layout>
