<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="user"
            type="com.skaravatskiy.randomusers.data.model.database.User" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_call"
                    android:layout_width="@dimen/size_button_call"
                    android:layout_height="@dimen/size_button_call"
                    android:layout_marginTop="@dimen/margin_big"
                    android:background="@android:drawable/sym_action_call"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_location" />

                <ImageView
                    android:id="@+id/image_user_photo"
                    android:layout_width="@dimen/size_image_profile"
                    android:layout_height="@dimen/size_image_profile"
                    android:layout_marginTop="@dimen/margin_large"
                    app:imageUrl="@{user.picture}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@mipmap/ic_launcher"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_short"
                    android:fontFamily="sans-serif-black"
                    android:text="@{user.nameFirst + ' ' + user.nameLast}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_large"
                    app:layout_constraintEnd_toEndOf="@+id/image_user_photo"
                    app:layout_constraintStart_toStartOf="@+id/image_user_photo"
                    app:layout_constraintTop_toBottomOf="@+id/image_user_photo"
                    tools:text="Alice Gonzales" />

                <TextView
                    android:id="@+id/text_age"
                    style="@style/TextDescLittle"
                    android:text="@{@string/tv_age(user.age)}"
                    app:layout_constraintEnd_toEndOf="@+id/text_full_name"
                    app:layout_constraintStart_toStartOf="@+id/text_full_name"
                    app:layout_constraintTop_toBottomOf="@+id/text_full_name"
                    tools:text="25 years old" />

                <TextView
                    android:id="@+id/text_dob_desc"
                    style="@style/TextDescLittle"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/tv_date_of_birth_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_age" />

                <TextView
                    android:id="@+id/text_data_of_birth"
                    style="@style/TextDescMedium.Black"
                    android:text="@{user.dob}"
                    app:layout_constraintStart_toStartOf="@+id/text_dob_desc"
                    app:layout_constraintTop_toBottomOf="@+id/text_dob_desc"
                    tools:text="1985-06-18" />

                <TextView
                    android:id="@+id/text_gender_desc"
                    style="@style/TextDescLittle"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/tv_gender_description"
                    app:layout_constraintStart_toStartOf="@+id/text_data_of_birth"
                    app:layout_constraintTop_toBottomOf="@+id/text_data_of_birth" />

                <TextView
                    android:id="@+id/text_gender"
                    style="@style/TextDescMedium.Black"
                    android:text="@{user.gender}"
                    app:layout_constraintStart_toStartOf="@+id/text_gender_desc"
                    app:layout_constraintTop_toBottomOf="@+id/text_gender_desc"
                    tools:text="Female" />

                <TextView
                    android:id="@+id/text_cell_desc"
                    style="@style/TextDescLittle"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/tv_cell_phone"
                    app:layout_constraintStart_toStartOf="@+id/text_gender"
                    app:layout_constraintTop_toBottomOf="@+id/text_gender" />

                <TextView
                    android:id="@+id/text_cell_number"
                    style="@style/TextDescMedium.Black"
                    android:text="@{user.cell}"
                    app:layout_constraintStart_toStartOf="@+id/text_cell_desc"
                    app:layout_constraintTop_toBottomOf="@+id/text_cell_desc"
                    tools:text="+18045789351" />

                <TextView
                    android:id="@+id/text_email_desc"
                    style="@style/TextDescLittle"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/tv_description_email"
                    app:layout_constraintStart_toStartOf="@+id/text_cell_number"
                    app:layout_constraintTop_toBottomOf="@+id/text_cell_number" />

                <TextView
                    android:id="@+id/text_email"
                    style="@style/TextDescMedium.Black"
                    android:text="@{user.email}"
                    app:layout_constraintStart_toStartOf="@+id/text_email_desc"
                    app:layout_constraintTop_toBottomOf="@+id/text_email_desc"
                    tools:text="example@gmail.com" />

                <TextView
                    android:id="@+id/text_location_desc"
                    style="@style/TextDescLittle"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/tv_location_description"
                    app:layout_constraintStart_toStartOf="@+id/text_email"
                    app:layout_constraintTop_toBottomOf="@+id/text_email" />

                <TextView
                    android:id="@+id/text_location"
                    style="@style/TextDescMedium.Black"
                    android:text="@{user.location}"
                    app:layout_constraintStart_toStartOf="@+id/text_location_desc"
                    app:layout_constraintTop_toBottomOf="@+id/text_location_desc"
                    tools:text="Kyiv, Ukraine" />

            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>
</layout>
